--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.5.2",
     "nanoid": "^5.0.2",
-    "next": "14.0.0",
+    "next": "^14.0.1",
+    "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
