--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.5.2",
+    "eventemitter3": "^5.0.1",
+    "framer-motion": "^10.16.4",
     "nanoid": "^5.0.2",
     "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
