--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "valid-url": "^1.0.9"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/valid-url": "^1.0.6",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
