bugfix: next-auth profile creation | prisma envs, migration changed

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
+POSTGRES_PRISMA_URL="postgresql://username:password@host:port/database?schema=public"
+POSTGRES_URL_NON_POOLING="postgresql://username:password@host:port/database?schema=public"
 NEXT_PUBLIC_APP_URL="https://www.your-deploy-url.com"
 
 NEXTAUTH_SECRET="secretkey"
