--- a/package.json
+++ b/package.json
@@ -11,28 +11,30 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
-    "@headlessui/react": "^1.7.17",
+    "@auth/prisma-adapter": "^2.8.0",
+    "@headlessui/react": "^2.2.1",
     "@nextui-org/react": "^2.1.13",
-    "@prisma/client": "^5.5.2",
-    "framer-motion": "^10.16.4",
-    "nanoid": "^5.0.2",
-    "next": "^14.0.1",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "@prisma/client": "^6.6.0",
+    "motion": "^12.7.3",
+    "nanoid": "^5.1.5",
+    "next": "^15.3.0",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
-    "postcss": "^8",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/parser": "^8.30.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "15.3.0",
+    "postcss": "^8.5.3",
     "prisma": "^5.5.2",
-    "tailwindcss": "^3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
