--- a/package.json
+++ b/package.json
@@ -15,26 +15,36 @@
     "@headlessui/react": "^2.2.1",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^6.6.0",
-    "motion": "^12.7.3",
+    "motion": "^12.6.3",
     "nanoid": "^5.1.5",
-    "next": "^15.3.0",
+    "next": "15.2.4",
     "next-auth": "^4.24.11",
-    "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.2.0"
+    "next-themes": "latest",
+    "react": "^19",
+    "react-dom": "^19",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.3.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.3"
+    "typescript": "^5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "esbuild",
+      "msw",
+      "prisma",
+      "sharp"
+    ]
   }
 }
