--- a/package.json
+++ b/package.json
@@ -15,17 +15,26 @@
     "@headlessui/react": "^2.2.1",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.488.0",
     "motion": "^12.6.3",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
+    "qrcode": "^1.5.4",
     "react": "^19",
     "react-dom": "^19",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/parser": "^8.30.1",
