--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.3",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.24.0",
