--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@headlessui/react": "^2.2.1",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.6.3",
     "nanoid": "^5.1.5",
@@ -30,7 +35,9 @@
     "next-themes": "latest",
     "qrcode": "^1.5.4",
     "react": "^19",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.3",
