--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "motion": "^12.6.3",
@@ -37,6 +38,8 @@
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -44,10 +47,12 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.9",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-simple-maps": "^3.0.6",
     "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.21",
