feat(analytics-charts): add country flags to TopCountriesTable

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-themes": "latest",
     "qrcode": "^1.5.4",
     "react": "^19",
+    "react-country-flag": "^3.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-simple-maps": "^3.0.0",
