--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "latest",
+    "nuqs": "^2.4.3",
     "qrcode": "^1.5.4",
     "react": "^19",
     "react-country-flag": "^3.1.0",
