--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.3",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
