--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@headlessui/react": "^2.2.1",
+    "@hookform/resolvers": "^5.0.1",
     "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.4",
@@ -22,6 +23,7 @@
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +42,7 @@
     "react-country-flag": "^3.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-hook-form": "^7.55.0",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
