--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-hover-card": "^1.1.10",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.3",
@@ -36,6 +37,7 @@
     "next-themes": "latest",
     "nuqs": "^2.4.3",
     "qrcode": "^1.5.4",
+    "qss": "^3.0.0",
     "react": "^19",
     "react-country-flag": "^3.1.0",
     "react-day-picker": "8.10.1",
