feat: add demo user logic + seed; app tour; update README

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
+# Database URLs (ensure both point to your PostgreSQL instance)
 POSTGRES_PRISMA_URL="postgresql://username:password@host:port/database?schema=public"
 POSTGRES_URL_NON_POOLING="postgresql://username:password@host:port/database?schema=public"
-NEXT_PUBLIC_APP_URL="https://www.your-deploy-url.com"
 
-NEXTAUTH_SECRET="secretkey"
-NEXTAUTH_URL="https://www.your-deploy-url.com"
+# Application URL (replace with your deployment URL or http://localhost:3000 for dev)
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# NextAuth configuration
+NEXTAUTH_SECRET="your-secure-random-secret" # Generate a strong secret key
+NEXTAUTH_URL="http://localhost:3000" # Use NEXT_PUBLIC_APP_URL in production
+
+# Google OAuth Credentials (Optional - for Google login)
+# Visit: [https://console.cloud.google.com/apis/credentials](https://console.cloud.google.com/apis/credentials)
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
