feat: implement safe server action flow; implement metrics, analytics, logging, security

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@arcjet/inspect": "1.0.0-beta.6",
+    "@arcjet/next": "1.0.0-beta.6",
     "@auth/prisma-adapter": "^2.8.0",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
@@ -32,20 +34,24 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@sentry/nextjs": "^9.14.0",
     "@t3-oss/env-nextjs": "^0.13.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
+    "import-in-the-middle": "^1.13.1",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
     "nanoid": "^5.1.5",
-    "next": "15.2.4",
+    "next": "15.3.1",
     "next-auth": "^4.24.11",
     "next-safe-action": "^7.10.7",
     "next-themes": "latest",
     "nuqs": "^2.4.3",
+    "posthog-js": "^1.237.0",
+    "posthog-node": "^4.14.0",
     "qrcode": "^1.5.4",
     "qss": "^3.0.0",
     "react": "^19",
@@ -57,6 +63,7 @@
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
+    "require-in-the-middle": "^7.5.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.3",
@@ -88,6 +95,8 @@
     "onlyBuiltDependencies": [
       "@prisma/client",
       "@prisma/engines",
+      "@sentry/cli",
+      "core-js",
       "esbuild",
       "msw",
       "prisma",
