--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@ NEXTAUTH_SECRET="your-secure-random-secret" # Generate a strong secret key
 # Visit: [https://console.cloud.google.com/apis/credentials](https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+ARCJET_KEY=your-arcjet-key
+
+SENTRY_AUTH_TOKEN=sentry-token
+
+NEXT_PUBLIC_SENTRY_DSN="https://1234.ingest.de.sentry.io/4321"
+
+NEXT_PUBLIC_POSTHOG_KEY=posthog-key
+NEXT_PUBLIC_POSTHOG_HOST=https://posthog.com
