feat: add metadata, og-image, og-protected-link, seo optimization

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# === Required Variables ===
+
 # Database URLs (ensure both point to your PostgreSQL instance)
 POSTGRES_PRISMA_URL="postgresql://username:password@host:port/database?schema=public"
 POSTGRES_URL_NON_POOLING="postgresql://username:password@host:port/database?schema=public"
@@ -6,18 +8,32 @@ POSTGRES_URL_NON_POOLING="postgresql://username:password@host:port/database?sche
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # NextAuth configuration
-NEXTAUTH_SECRET="your-secure-random-secret" # Generate a strong secret key
+NEXTAUTH_SECRET="your-secure-random-secret" # Generate a strong secret key (e.g., using `openssl rand -base64 32`)
 
-# Google OAuth Credentials (Optional - for Google login)
+# === Optional: Authentication Providers ===
+
+# Google OAuth Credentials (Required ONLY if you want Google login)
 # Visit: [https://console.cloud.google.com/apis/credentials](https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
-ARCJET_KEY=your-arcjet-key
+# === Optional: Monitoring, Analytics & Security Services ===
+# These variables integrate with third-party services for enhanced monitoring, analytics,
+# and security. They are NOT strictly required for the core functionality of Snipper
+# if you are self-hosting, but are recommended for production environments.
 
-SENTRY_AUTH_TOKEN=sentry-token
+# Arcjet (Bot Protection, Rate Limiting, etc.)
+# Visit: [https://arcjet.com/](https://arcjet.com/)
+ARCJET_KEY="your-arcjet-key"
 
-NEXT_PUBLIC_SENTRY_DSN="https://1234.ingest.de.sentry.io/4321"
+# Sentry (Error Monitoring & Performance Tracking)
+# Visit: [https://sentry.io/](https://sentry.io/)
+SENTRY_ORG="your-sentry-org-name"
+SENTRY_PROJECT="your-sentry-project-name"
+SENTRY_AUTH_TOKEN="your-sentry-auth-token"     # Required for build-time operations like source map uploads
+NEXT_PUBLIC_SENTRY_DSN="your-sentry-public-dsn" # Public DSN for client/server error reporting
 
-NEXT_PUBLIC_POSTHOG_KEY=posthog-key
-NEXT_PUBLIC_POSTHOG_HOST=https://posthog.com
+# PostHog (Product Analytics)
+# Visit: [https://posthog.com/](https://posthog.com/)
+NEXT_PUBLIC_POSTHOG_KEY="your-posthog-public-key"  # Public API Key for sending events
+NEXT_PUBLIC_POSTHOG_HOST="[https://app.posthog.com](https://app.posthog.com)" # Your PostHog instance URL (Cloud default or self-hosted)
