--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snipper",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -36,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@sentry/nextjs": "^9.14.0",
     "@t3-oss/env-nextjs": "^0.13.0",
+    "@vercel/og": "^0.6.8",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -84,12 +85,13 @@
     "eslint-config-next": "15.3.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
+    "schema-dts": "^1.1.5",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.3",
     "typescript": "^5"
   },
   "overrides": {
-    "react-is": "^19"
+    "react-is": "^19.1.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
