feat: add PDF export functionality for analytics reports
- Introduced PdfExportButton component for exporting analytics data as PDF.
- Integrated PdfExportButton in AnalyticsDevices and AnalyticsTabs for various reports (Clicks by Browser, OS, Device, etc.).
- Updated analytics helpers to format percentage as a string with a percentage sign.
- Modified DevicesTable and ReferrersTable to display percentage as a string.
- Enhanced ClicksTable to use getCountryName for better country representation.
- Updated UTMValueTable to reflect changes in percentage formatting.
- Adjusted pricing tiers in PricingTiers component, including changes to plan limits and pricing.
- Added slugify utility function for generating URL-friendly strings.

--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "import-in-the-middle": "^1.13.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.488.0",
     "motion": "^12.7.3",
     "nanoid": "^5.1.5",
