--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -56,6 +57,7 @@
     "posthog-js": "^1.237.0",
     "posthog-node": "^4.14.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "qss": "^3.0.0",
     "react": "^19",
     "react-country-flag": "^3.1.0",
