--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@sentry/nextjs": "^9.14.0",
     "@t3-oss/env-nextjs": "^0.13.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
+    "@vercel/edge": "^1.2.1",
     "@vercel/og": "^0.6.8",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
