--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
+    "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
