--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-page-tracker": "^0.3.1",
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.28.1",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.2",
     "require-in-the-middle": "^7.5.2",
     "tailwind-merge": "^2.6.0",
@@ -95,6 +96,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-simple-maps": "^3.0.6",
+    "@types/react-window": "^1.8.8",
     "@types/ua-parser-js": "^0.7.39",
     "@typescript-eslint/parser": "^8.30.1",
     "autoprefixer": "^10.4.21",
