--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "idb": "^8.0.3",
     "import-in-the-middle": "^1.13.1",
     "jspdf": "^3.0.1",
@@ -65,6 +66,7 @@
     "next-safe-action": "^7.10.7",
     "next-themes": "latest",
     "nuqs": "^2.4.3",
+    "papaparse": "^5.5.2",
     "posthog-js": "^1.237.0",
     "posthog-node": "^4.14.0",
     "qrcode": "^1.5.4",
@@ -86,12 +88,15 @@
     "ua-parser-js": "^2.0.3",
     "uploadthing": "^7.7.2",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@types/d3-scale": "^4.0.9",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22",
+    "@types/papaparse": "^5.3.16",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
