--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@marsidev/react-turnstile": "^1.1.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -51,6 +52,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
